feat: saveAstronomer Endpoint implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8181
-spring.application.name=ProfessorAPI
+spring.application.name=AstronomerAPI
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27018
