feat: ascii art and docs improvement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8181
+spring.banner.location=classpath:/banner/title.txt
 spring.application.name=AstronomerAPI
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27018
